--- a/product-xx99-mark-one-headphones.html
+++ b/product-xx99-mark-one-headphones.html
@@ -66,6 +66,7 @@
           <button class="shopping-cart-btn" aria-controls="shopping-cart">
             <img src="./assets/shared/desktop/icon-cart.svg" alt="shopping cart">
           </button>
+          <div class="cart-items-quantity">0</div>
           <div class="shopping-cart">
             <div>
               <h4>CART (<span class="cart-counter">0</span>)</h4>
@@ -306,6 +307,7 @@
 
   <script src="./js/main.js"></script>
   <script src="./js/counter.js"></script>
+  <script src="./js/shopping-cart.js"></script>
 </body>
 
 </html>
