--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <button class="shopping-cart-btn" aria-controls="shopping-cart">
             <img src="./assets/shared/desktop/icon-cart.svg" alt="shopping cart">
           </button>
+          <div class="cart-items-quantity">0</div>
           <div class="shopping-cart">
             <div>
               <h4>CART (<span class="cart-counter">0</span>)</h4>
@@ -92,8 +93,10 @@
         <h1 class="main-titles">XX99 Mark II Headphones</h1>
         <p>Experience natural, lifelike audio and exceptional build quality made for the passionate music enthusiast.
         </p>
-        <a href="./product-xx99-mark-two-headphones.html" type="button" class="see-product">see
-          product</a>
+        <div>
+          <a href="./product-xx99-mark-two-headphones.html" type="button" class="see-product">see
+            product</a>
+        </div>
       </section>
       <!-- end of section under the header -->
 
@@ -232,6 +235,7 @@
 
   <script src="./js/main.js"></script>
   <script src="./js/counter.js"></script>
+  <script src="./js/shopping-cart.js"></script>
 </body>
 
 </html>
